<resources>
    <string name="app_name">Primer certamen</string>
    <string name="datos_personales">Datos personales</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="email">E-mail</string>
    <string name="phone">Teléfono</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="next">Siguiente</string>
    <string name="register">Registrar</string>

</resources>
